# arca-dsa

./: Dockerfile  POETRY.md  README.md  app.py  docker-compose.yml  pyproject.toml
data/: shopping_carts.json
dsa/hash/: search_warehouse.py  shopping_carts.py
tests/: test_shopping_carts.py
